<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/mj2"
        android:scaleType="centerCrop"
        android:layout_gravity="top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signup_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/colorRedRose"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_enter_username"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorRedRose"/>

        <TextView
            android:layout_below="@+id/signup_username"
            android:id="@+id/signup_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorRedRose"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:layout_below="@+id/signup_enter_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_enter_password"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorRedRose"/>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_padding"
            android:text="@string/next_button"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>